--- a/01-ci-cd-basics/01-ci-cd-basics/Jenkinsfile
+++ b/01-ci-cd-basics/01-ci-cd-basics/Jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    tools {
+        maven 'maven-3'
+    }
+
     stages {
         stage('Checkout') {
             steps {
@@ -26,4 +30,5 @@ pipeline {
         }
     }
 }
+
 
