feat(stage-3): gate docker build behind successful CI

--- a/01-ci-cd-basics/01-ci-basics/Jenkinsfile
+++ b/01-ci-cd-basics/01-ci-basics/Jenkinsfile
@@ -12,23 +12,32 @@ pipeline {
             }
         }
 
-        stage('Build') {
+        stage('Build & Test') {
             steps {
                 dir('00-foundations/app') {
                     sh 'mvn clean package'
                 }
             }
         }
+
+        stage('Docker Build') {
+            steps {
+                sh '''
+                  docker build \
+                    -t foundations-app:ci \
+                    -f 02-docker/Dockerfile .
+                '''
+            }
+        }
     }
 
     post {
         success {
-            echo 'Build successful'
+            echo 'CI passed and Docker image built'
         }
         failure {
-            echo 'Build failed'
+            echo 'Pipeline failed before Docker packaging'
         }
     }
 }
-
 
