--- a/01-ci-cd-basics/Jenkinsfile
+++ b/01-ci-cd-basics/Jenkinsfile
@@ -30,8 +30,20 @@ pipeline {
             }
         }
     }
-
-    post {
+stage('Push to Docker Hub') {
+    steps {
+        script {
+            withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                sh """
+                    echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+                    docker tag foundations-app:ci $DOCKER_USER/foundations-app:ci
+                    docker push $DOCKER_USER/foundations-app:ci
+                """
+            }
+        }
+    }
+}
+      post {
         success {
             echo 'CI passed and Docker image built'
         }
