--- a/01-ci-cd-basics/Jenkinsfile
+++ b/01-ci-cd-basics/Jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-
+tools {
+    maven 'maven-3'
+}
     environment {
         IMAGE_NAME = "foundations-app"
         IMAGE_TAG  = "ci"
